# webhook_receiver

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
env/: web.env
nbintegrate_example/: __init__.py
user_tasks/: __init__.py
webhook_receiver/: __init__.py  task_registry.py  tasks.py
